# transportnsw-mcp

./: .gitignore  LICENSE  README.md  api.py  coord_demo.py  demo.py  hello.py  main.py  pyproject.toml  swagger-codegen-docker.sh  test_alerts.py  test_api.py  test_coordinates.py  test_departure.py  test_departure_direct.py  test_departure_monitor_direct.py  test_departure_monitor_function.py  test_departure_monitor_updated.py  test_departure_params.py  test_stopfinder.py  test_trip_planner.py
.github/workflows/: tests.yml
tests/: test_api.py  test_departure.py  test_departure_monitor.py  test_departure_monitor_direct.py  test_departure_monitor_function.py  test_departure_monitor_updated.py  test_stopfinder.py  test_trip_planner.py
